# market_backtest

./: Cargo.toml
data/: AAPL.csv  SPDR_etf.csv  candles_252.csv  daily-treasury-rates.csv  sample.csv
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_target_1.rs
market_backtest/: Cargo.toml
market_backtest/src/: data.rs  lib.rs  main.rs  metrics.rs
src/: data.rs  main.rs  metrics.rs
