[package]
name = "market_backtest"
version = "0.1.0"
edition = "2024"

[dependencies]
csv = "1.3"          # for reading CSV data
serde = { version = "1.0", features = ["derive"] } # parse CSV into structs
chrono = "0.4"       # for date handling
statrs = "0.16"      # statistics later (Sharpe ratio etc.)
rand = "0.8"
rand_distr = "0.4"
